--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -174,6 +174,9 @@
       width: 100%;
       height: 1px;
     }
+    .line.gray-border {
+      background-color: #ababab;
+    }
     .line.yellow-border {
       background-color: #f4e774;
     }
@@ -205,6 +208,9 @@
     .kanban-icons {
       opacity: 1;
     }
+  }
+  .kanban-note.gray-border {
+    border: 0.5px solid #ababab;
   }
   .kanban-note.yellow-border {
     border: 0.5px solid #f4e774;
@@ -303,12 +309,30 @@
   border-radius: 50%;
   width: 20px;
   height: 20px;
+  transition: $transition;
 }
-
+.color-option:hover {
+  border: 1px solid #000;
+}
 .color-option.active {
-  border: 2px solid #000;
+  border: 1px solid #000;
 }
 
+.default-border {
+  position: relative;
+  border: 1px solid #797979;
+}
+.default-border::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg); /* Center the pseudo-element */
+  width: 100%; /* Maintain full width for line coverage */
+  height: 2px; /* Adjust height for desired line thickness */
+  background-color: transparent; /* Transparent background for better visibility */
+  border-top: 1px solid #000; /* Diagonal line using border-top */
+}
 .pink-border {
   background-color: #ff99cc;
 }
