--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3372,6 +3372,9 @@ textarea {
   width: 100%;
   height: 1px;
 }
+.kanban-content .kanban-note .line.gray-border {
+  background-color: #ababab;
+}
 .kanban-content .kanban-note .line.yellow-border {
   background-color: #f4e774;
 }
@@ -3400,6 +3403,9 @@ textarea {
 }
 .kanban-content .kanban-note:hover .kanban-icons {
   opacity: 1;
+}
+.kanban-content .kanban-note.gray-border {
+  border: 0.5px solid #ababab;
 }
 .kanban-content .kanban-note.yellow-border {
   border: 0.5px solid #f4e774;
@@ -3466,10 +3472,32 @@ textarea {
   border-radius: 50%;
   width: 20px;
   height: 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+.color-option:hover {
+  border: 1px solid #000;
 }
 
 .color-option.active {
-  border: 2px solid #000;
+  border: 1px solid #000;
+}
+
+.default-border {
+  position: relative;
+  border: 1px solid #797979;
+}
+
+.default-border::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg); /* Center the pseudo-element */
+  width: 100%; /* Maintain full width for line coverage */
+  height: 2px; /* Adjust height for desired line thickness */
+  background-color: transparent; /* Transparent background for better visibility */
+  border-top: 1px solid #000; /* Diagonal line using border-top */
 }
 
 .pink-border {
