--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -208,6 +208,9 @@
     .kanban-icons {
       opacity: 1;
     }
+    .select-note-icon {
+      opacity: 1;
+    }
   }
   .kanban-note.gray-border {
     border: 0.5px solid #ababab;
