--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -352,4 +352,40 @@
   background-color: #d4edd7;
 }
 
-/* Customize the flatpickr calendar appearance */
+.list-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .list {
+    display: flex;
+    gap: 0.5rem;
+    overflow: scroll;
+    max-width: 300px;
+    flex-wrap: nowrap;
+    align-self: flex-end;
+  }
+
+  .list::-webkit-scrollbar {
+    display: none;
+  }
+
+  .edit-content-menu__category {
+    display: inline-block;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    border: 1px solid var(--color-primary);
+    padding: 0 0.5rem;
+    cursor: pointer;
+  }
+  .edit-content-menu__category:last-child {
+    margin-left: 0.5rem;
+  }
+  .edit-content-menu__category:hover {
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+  }
+  .edit-content-menu__category.clicked {
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+  }
+}
