--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3531,7 +3531,42 @@ textarea {
   background-color: #d4edd7;
 }
 
-/* Customize the flatpickr calendar appearance */
+.list-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.list-container .list {
+  display: flex;
+  gap: 0.5rem;
+  overflow: scroll;
+  max-width: 300px;
+  flex-wrap: nowrap;
+  align-self: flex-end;
+}
+.list-container .list::-webkit-scrollbar {
+  display: none;
+}
+.list-container .edit-content-menu__category {
+  display: inline-block;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  border: 1px solid var(--color-primary);
+  padding: 0 0.5rem;
+  cursor: pointer;
+}
+.list-container .edit-content-menu__category:last-child {
+  margin-left: 0.5rem;
+}
+.list-container .edit-content-menu__category:hover {
+  background-color: var(--color-primary);
+  color: var(--color-on-primary);
+}
+.list-container .edit-content-menu__category.clicked {
+  background-color: var(--color-primary);
+  color: var(--color-on-primary);
+}
+
 .main-container {
   position: relative;
   max-width: 100%;
