--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -315,3 +315,40 @@
   background-color: #e0f0fb !important;
   border: 1px solid var(--color-blue);
 }
+
+/* Define the container */
+.kanban-note {
+  container-type: inline-size;
+  container-name: card;
+}
+
+
+@container card (width < 320px) {
+  .note-card {
+    background-color: var(--color-bg);
+
+    .card-header {
+      .top {
+        .left {
+          flex-direction: column;
+        }
+      }
+    }
+
+    .round-img-container {
+      display: none;
+    }
+
+    .card__boxes {
+      grid-template-columns: repeat(1, 1fr) !important;
+      width: fit-content;
+    }
+
+    .card__boxes--box {
+      padding: 8px 4px;
+      border-radius: 0;
+      // width: 0px !important;
+      min-width: fit-content !important;
+    }
+  }
+}
