--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1448,6 +1448,32 @@ tr > td:first-child {
   border: 1px solid var(--color-blue);
 }
 
+/* Define the container */
+.kanban-note {
+  container-type: inline-size;
+  container-name: card;
+}
+
+@container card (width < 320px) {
+  .note-card {
+    background-color: var(--color-bg);
+  }
+  .note-card .card-header .top .left {
+    flex-direction: column;
+  }
+  .note-card .round-img-container {
+    display: none;
+  }
+  .note-card .card__boxes {
+    grid-template-columns: repeat(1, 1fr) !important;
+    width: fit-content;
+  }
+  .note-card .card__boxes--box {
+    padding: 8px 4px;
+    border-radius: 0;
+    min-width: fit-content !important;
+  }
+}
 input[type=text],
 input[type=password],
 input[type=number] {
@@ -3334,6 +3360,8 @@ textarea {
   padding-right: 0.4rem;
   font-size: 1.8rem;
   pointer-events: none; /* Make the kanban-title non-draggable */
+  display: flex;
+  justify-content: space-between;
 }
 .kanban-content .kanban-note {
   border-radius: 0.5rem;
@@ -3566,6 +3594,15 @@ textarea {
 .list-container .edit-content-menu__category.clicked {
   background-color: var(--color-primary);
   color: var(--color-on-primary);
+}
+
+.note-card .card-header .top .left {
+  flex-direction: column;
+  align-items: start;
+}
+.note-card .card-header .top .right {
+  align-self: start;
+  padding-top: 1rem;
 }
 
 .main-container {
