--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -222,6 +222,7 @@
   }
   .kanban-note.pink-border {
     border: 0.5px solid #ffc1bb;
+    background-color: #ffc1bb;
   }
   .kanban-note.blue-border {
     border: 0.5px solid #d4e4ed;
