--- a/sass/_kanban.scss
+++ b/sass/_kanban.scss
@@ -130,6 +130,7 @@
     background-color: var(--color-on-primary);
     position: relative;
     transition: $transition;
+    z-index: 90;
 
     &-header {
       display: flex;
@@ -203,6 +204,7 @@
       display: flex;
       align-items: center;
       gap: 1rem;
+      position: relative;
     }
   }
   .kanban-note:hover {
@@ -221,7 +223,7 @@
   }
   .kanban-note.yellow-border {
     border: 0.5px solid #f4e774;
-    background-color:  #fffad1;
+    background-color:  #fcf7cb;
 
   }
   .kanban-note.pink-border {
@@ -307,13 +309,14 @@
   padding: 10px;
 }
 
+
 .color-menu {
   position: absolute;
-  top: 100%;
+  top: 40px;
   background-color: #fff;
   padding: 10px;
   border: 1px solid #ccc;
-  z-index: 1;
+  z-index: 99;
   display: flex;
 }
 
@@ -407,11 +410,40 @@
       .left {
         flex-direction: column;
         align-items: start;
+        gap: 0;
       }
       .right {
         align-self: start;
         padding-top: 1rem;
       }
     }
+  }
+
+  .card-header {
+    .top {
+      .left {
+        flex-direction: column;
+      }
+      .right {
+        position: relative;
+      }
+    }
+  }
+
+  .round-img-container {
+    display: none;
+  }
+
+  .card__boxes {
+    grid-template-columns: repeat(1, 1fr) !important;
+    // width: fit-content;
+  }
+
+  .card__boxes--box {
+    padding: 8px 4px;
+    border-radius: 0;
+    // width: 0px !important;
+    // min-width: fit-content !important;
+    min-width: 100px;
   }
 }
