--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3485,6 +3485,11 @@ textarea {
   background-color: #d4f1d6;
 }
 
+.kanban-expanded {
+  width: 700px;
+  max-width: 700px;
+}
+
 .kanban.minimize {
   display: flex;
   align-items: start;
@@ -3643,6 +3648,9 @@ textarea {
   padding: 8px 4px;
   border-radius: 0;
   min-width: 300px;
+}
+.note-card .fields-wrapper .fields {
+  grid-template-columns: repeat(1, 1fr);
 }
 
 .main-container {
