--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3457,6 +3457,7 @@ textarea {
 }
 .kanban-content .kanban-note:hover {
   box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.07);
 }
 .kanban-content .kanban-note:hover .kanban-icons {
   opacity: 1;
