--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3384,10 +3384,11 @@ textarea {
   flex-direction: column;
   gap: 1rem;
   cursor: grab;
-  background-color: var(--color-on-primary);
   position: relative;
   transition: all 0.2s ease-in-out;
   z-index: 90;
+  background-color: var(--color-bg);
+  border: 0.5px solid #d6d6d6;
 }
 .kanban-content .kanban-note-header {
   display: flex;
@@ -3435,13 +3436,13 @@ textarea {
   background-color: #f4e774;
 }
 .kanban-content .kanban-note .line.pink-border {
-  background-color: #ffe4e2;
+  background-color: #ffcfcc;
 }
 .kanban-content .kanban-note .line.blue-border {
   background-color: #d4e4ed;
 }
 .kanban-content .kanban-note .line.green-border {
-  background-color: #d4edd7;
+  background-color: #b3cfb7;
 }
 .kanban-content .kanban-note-title {
   margin-bottom: -10px;
@@ -3466,15 +3467,15 @@ textarea {
   opacity: 1;
 }
 .kanban-content .kanban-note.gray-border {
-  border: 0.5px solid #dddddd;
-  background-color: var(--color-on-primary);
+  border: 0.5px solid #d6d6d6;
+  background-color: var(--color-bg);
 }
 .kanban-content .kanban-note.yellow-border {
   border: 0.5px solid #f4e774;
   background-color: #fcf7cb;
 }
 .kanban-content .kanban-note.pink-border {
-  border: 0.5px solid #ffe0de;
+  border: 0.5px solid #ffcfcc;
   background-color: #ffe8e6;
 }
 .kanban-content .kanban-note.blue-border {
@@ -3482,7 +3483,7 @@ textarea {
   background-color: #e9f7ff;
 }
 .kanban-content .kanban-note.green-border {
-  border: 0.5px solid #d4edd7;
+  border: 0.5px solid #b3cfb7;
   background-color: #d4f1d6;
 }
 
@@ -3573,19 +3574,19 @@ textarea {
 }
 
 .pink-border {
-  background-color: #ff99cc;
+  background-color: #ffcfcc;
 }
 
 .blue-border {
-  background-color: #99ccff;
+  background-color: #d1dee5;
 }
 
 .yellow-border {
-  background-color: #fff099;
+  background-color: #f4e774;
 }
 
 .green-border {
-  background-color: #d4edd7;
+  background-color: #b3cfb7;
 }
 
 .list-container {
@@ -3650,6 +3651,10 @@ textarea {
 }
 .note-card .container-new-small-boxes-second {
   opacity: 0;
+}
+
+.small-boxes-wrapper {
+  margin-top: 1.5rem;
 }
 
 .note-card:hover .container-new-small-boxes-second {
