--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -3468,6 +3468,12 @@ textarea {
 .kanban-content .kanban-note:hover .select-note-icon {
   opacity: 1;
 }
+.kanban-content .kanban-note:hover .select-note-icon:hover {
+  background-color: #000;
+}
+.kanban-content .note-selected {
+  border: 0.5px solid #000 !important;
+}
 .kanban-content .kanban-note.gray-border {
   border: 0.5px solid #d6d6d6;
   background-color: var(--color-bg);
