--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: $gap-large;
+    // gap: $gap-large;
     padding-top: $padding-medium;
 
     .left {
@@ -77,7 +77,7 @@
       .left {
         gap: $gap-small;
         flex-direction: column;
-        margin-bottom: 2rem;
+        // margin-bottom: 2rem;
         .title {
           align-items: center;
 
@@ -123,7 +123,7 @@
       gap: $gap-medium;
       .left {
         flex-direction: column;
-        margin-bottom: 2rem;
+        // margin-bottom: 2rem;
         .title {
           span {
             font-size: 24px;
@@ -169,7 +169,7 @@
 
       .left {
         gap: $gap-medium;
-        margin-bottom: 1rem;
+        // margin-bottom: 1rem;
         flex-direction: row;
       }
       .right {
