--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,7 @@
 // card header
 .card-header {
   padding: 0 $padding-small;
-  // padding-bottom: $padding-big;
+  padding-bottom: $padding-big;
   color: var(--color-on-primary-light);
 
   .top {
