--- a/sass/_filters.scss
+++ b/sass/_filters.scss
@@ -40,7 +40,8 @@
 }
 
 .filter-tag.green {
-  border: 1px solid var(--color-green-light);
+  // border: 1px solid var(--color-green-light);
+  background-color: var(--color-green-light);
   color: var(--color-green);
 }
 
@@ -48,9 +49,10 @@
   border: none;
   cursor: auto;
 }
-.filter-tag:hover {
-  background-color: var(--color-permanent-bg);
-}
+// .filter-tag:hover {
+  // background-color: var(--color-permanent-bg);
+
+// }
 
 .filter-tag.clicked {
   border: none;
