--- a/sass/_1.variables.scss
+++ b/sass/_1.variables.scss
@@ -7,7 +7,7 @@ html[data-theme="blue"] {
   --color-permanent-secondary-hover: #adddfc;
 
   --color-primary: #006493;
-  --color-on-primary: #fff;
+  --color-on-primary: #fdfcff;
   --color-primary-light: #cae6ff;
   --color-primary-light-hover: #bcd7ef;
   --color-on-primary-light: #444746;
