--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2367,6 +2367,7 @@ textarea {
   border: 1px solid var(--color-on-primary);
   width: 200px;
   transition: all 0.2s ease-in-out;
+  background-color: var(--color-on-primary);
 }
 .edit-content .edit-content-menu {
   position: absolute;
@@ -2458,7 +2459,7 @@ textarea {
 }
 .edit-content .label {
   padding-right: 0.5rem;
-  max-width: 90px;
+  max-width: 100px;
   font-size: 1.25rem;
   display: flex;
   gap: 1.5rem;
