--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -232,8 +232,9 @@
 }
 
 .edit-content.small {
-  min-width: 140px;
-  max-width: 100%;
+  min-width: 120px;
+  // max-width: 100%;
+  max-width: 120px;
 }
 .edit-content.medium {
   min-width: 140px;
