--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -105,7 +105,7 @@
             flex-wrap: wrap;
             gap: $gap-small;
             border-radius: $border-radius-small;
-
+            width: 100%;
             flex-grow: 1;
           }
 
