--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,7 +16,6 @@
       gap: $gap-medium;
       flex-direction: column;
 
-
       .title {
         display: flex;
         align-items: center;
@@ -109,6 +108,9 @@
     .top {
       .left {
         gap: $gap-small;
+        flex-direction: column;
+      }
+      .right {
         flex-direction: column;
       }
     }
