--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -542,13 +542,16 @@ i {
 }
 
 textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
+}
+
+textarea::-moz-placeholder {
+  color: gray;
+  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -605,6 +608,7 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
+  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 210px;
 }
@@ -661,7 +665,6 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -756,6 +759,10 @@ hr {
   align-items: center;
   gap: 2rem;
 }
+.navbar input[type=text].search-input::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.25rem;
+}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -796,7 +803,8 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1170,6 +1178,7 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
+  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1305,6 +1314,7 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1333,6 +1343,7 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1491,9 +1502,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input::-moz-placeholder {
+  color: var(--color-permanent-on-primary-light);
+  font-size: 1.25rem;
+}
+
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
+}
+
+input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
+  opacity: 0.5;
+  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1516,6 +1537,11 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
+}
+
+input[type=text].edit-name::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -1707,6 +1733,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -1747,6 +1774,7 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2056,6 +2084,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2073,6 +2102,7 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2168,6 +2198,7 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -2721,6 +2752,7 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -2808,6 +2840,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -2857,6 +2890,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -2994,6 +3028,9 @@ textarea {
     gap: 0.5rem;
     flex-direction: column;
   }
+  .card-header .top .right {
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 800px) and (max-width: 1400px), (max-width: 600px) {
@@ -3068,6 +3105,7 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
+  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -3470,6 +3508,7 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
+  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -3733,7 +3772,8 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -3962,7 +4002,8 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4013,7 +4054,8 @@ textarea {
 
 img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4191,7 +4233,8 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
