--- a/sass/_edit-mode.scss
+++ b/sass/_edit-mode.scss
@@ -6,12 +6,12 @@
 
   border-radius: $border-radius-small;
   padding: $padding-xsmall;
-  gap: $gap-medium;
-  border: 1px solid var(--color-on-primary);
+  gap: $gap-small;
+  // border: 1px solid var(--color-on-primary);
   width: 200px;
   transition: $transition;
 
-  background-color: var(--color-on-primary);
+  // background-color: var(--color-on-primary);
 
   .edit-content-menu {
     position: absolute;
@@ -127,6 +127,16 @@
       background-color: var(--color-primary-light);
       color: var(--color-on-primary-light);
     }
+  }
+  .pink-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--color-red-light);
+    color: var(--color-on-red-light);
+    border-radius: $border-radius-round;
+    height: 30px;
+    width: 30px;
   }
 
   .edit-field {
