--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -62,6 +62,9 @@
       display: flex;
       align-items: center;
       gap: $gap-small;
+      font-size: font-size(font-size-regular);
+      align-self: start;
+
       .edit-content {
         min-width: 150px;
         max-width: 0;
@@ -112,9 +115,6 @@
     .top {
       .left {
         gap: $gap-small;
-        flex-direction: column;
-      }
-      .right {
         flex-direction: column;
       }
     }
