--- a/sass/_icons.scss
+++ b/sass/_icons.scss
@@ -116,3 +116,15 @@
   font-size: 21px;
   opacity: 0;
 }
+
+.on-going-status-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-red-light);
+  color: var(--color-on-red-light);
+  border-radius: $border-radius-round;
+  height: 25px;
+  width: 25px;
+  font-size: 22px;
+}
