--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -575,7 +575,7 @@ hr {
 .flex-container {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 5px;
   flex-wrap: wrap;
 }
 
@@ -2388,6 +2388,18 @@ textarea {
   opacity: 0;
 }
 
+.on-going-status-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-red-light);
+  color: var(--color-on-red-light);
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  font-size: 22px;
+}
+
 .edit-content {
   position: relative;
   display: flex;
@@ -2505,16 +2517,6 @@ textarea {
   border-radius: 50%;
   background-color: var(--color-primary-light);
   color: var(--color-on-primary-light);
-}
-.edit-content .pink-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: var(--color-red-light);
-  color: var(--color-on-red-light);
-  border-radius: 50%;
-  height: 30px;
-  width: 30px;
 }
 .edit-content .edit-field {
   display: flex;
