--- a/sass/_1.variables.scss
+++ b/sass/_1.variables.scss
@@ -37,7 +37,7 @@ html[data-theme="blue"] {
   --color-table-th: #f2f5fc;
   --color-table-th-hover: #f0f1f1;
 
-  --color-green: #006029;
+  --color-green: #017a36;
   --color-green-hover: #0a7136;
   --color-green-light: #cad7bd;
   --color-on-green-light: #43493e;
