--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,9 +7,10 @@
   .top {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    // gap: $gap-large;
+    // align-items: center;
+    gap: $gap-medium;
     padding-top: $padding-medium;
+    flex-direction: column-reverse;
 
     .left {
       display: flex;
@@ -68,6 +69,8 @@
       padding: 0 0.5rem;
       height: 40px;
       border-radius: 1rem;
+      width: 50%;
+      align-self: flex-end;
 
       .edit-content {
         min-width: 150px;
@@ -194,5 +197,10 @@
         flex-direction: column;
       }
     }
+  }
+}
+@media screen and (max-width: 850px) {
+  .right {
+    width: 100% !important;
   }
 }
