--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -2964,8 +2964,9 @@ textarea {
 .card-header .top {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  gap: 1rem;
   padding-top: 1rem;
+  flex-direction: column-reverse;
 }
 .card-header .top .left {
   display: flex;
@@ -3014,6 +3015,8 @@ textarea {
   padding: 0 0.5rem;
   height: 40px;
   border-radius: 1rem;
+  width: 50%;
+  align-self: flex-end;
 }
 .card-header .top .right .edit-content {
   min-width: 150px;
@@ -3109,6 +3112,11 @@ textarea {
   }
 }
 
+@media screen and (max-width: 850px) {
+  .right {
+    width: 100% !important;
+  }
+}
 .calendar-menu {
   overflow-x: scroll;
   overflow-y: hidden;
